--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
     
         <img class="photo" src="src/img/foto__1.jpeg" alt="foto Luane Loureiro"/>
 
-        <h1 class="title">Luane Loureiro</h1>
+        <h1 class="title">
+            Olá, <br>eu sou <span id="profile.name">Carregando...</span>
+        </h1>
 
         <div class="informations">
-            <p class="job">
-                <a href="https://www.linkedin.com/in/luane-loureiro/">front-end Developer Junior</a> 
+            <p class="job" id="profile.job">Carregando...</p>
+            <p class="local" id="profile.location">Carregando...</p>
+            <p class="phone">
+                <a href="tel:(16) 9 9999-9999" id="profile.phone">Carregando...</a>
             </p>
-            <p class="local">Rio de Janeiro - Br</p>
-            <p class="tell">
-                <a href="tel:(21)99473-6215">(21)99473-6215</a>
-            </p>
-            <p class="mail">
-                <a href="mailto:luachan@gmail.com">Luachan@gmail.com</a> 
+            <p class="email">
+                <a href="mailto:ex@mail.com" id="profile.email">carregando@mail.com</a>
             </p>
         </div>  
     </header>
@@ -54,37 +54,18 @@
            <div class="skills"> 
                 <section class="hardSkills">
                     <h3>Hard Skills</h3>
-                    <ul>
-                        <li>
-                            <img src="src/img/htnl5.png" alt="HTML5" title="HTML5">
-                        </li>
-                        <li>
-                            <img src="src/img/css.png" alt="CSS3" title="CSS3">
-                        </li>
-                        <li>
-                            <img src="/src/img/javascript.png" alt="Java Scripit" title="Java Scripit">
-                        </li>
-                        <li>
-                            <img src="src/img/angular.png" alt="Angular" title="Angular">
-                        </li>
-                        <li>
-                            <img src="src/img/typeScript.png" alt="Type Script" title="Type Script">
-                        </li>
-                        <li>
-                            <img src="src/img/aws.png" alt="AWS" title="AWS">
-                        </li>
-                 </ul>
+                    <ul id="profile.skills.hardSkills">
+                    </ul>
                 </section>
             
 
                 <section class="SoftSkills">
                     <h3>Soft Skills</h3>
-                        <ul>
-                            <li>Problem Solving</li>
-                            <li>Creativity</li>
-                            <li>Responsibility</li>
-                            <li>Punctuality</li>     
-                        </ul>
+                    <ul id="profile.skills.softSkills">
+                        <li>Carregando...</li>
+                        <li>Carregando...</li>
+                        <li>Carregando...</li>
+                    </ul>
                 </section>    
             </div>
         </div>
