--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
         </button>
         <div class="content">
             <ul class="experience" id="profile.professionalExperience">
-                <li>Carregando...</li>
+                <li>
+                    <h3 class="title">Cerregando...</h3>
+                    <h4 class="date">Cerregando...</h4>
+                    <li class="decription">Carregando...</li>
+                </li>
             </ul>
             <br><br>
         </div>
