update json imges

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
            <div class="skills"> 
                 <section class="hardSkills">
                     <h3>Hard Skills</h3>
-                    <ul id="profile.skills.hardSkills">
+                    <ul id="profile.hardSkills">
                     </ul>
                 </section>
             
